[tool]
[tool.poetry]
name = "imagery"
version = "0.1.0"
description = "A CMS for artists."
license = "GPL-3.0-or-later"
authors = ["Jan Willems <jw@elevenbits.com>"]
maintainers = ["Jan Willems <jw@elevenbits.com>"]
readme = "README.rst"
homepage = "https://github.com/jw/stilus"
repository = "https://github.com/jw/stilus"
documentation = "https://stilus.readthedocs.io/en/latest/"
keywords = ["compiler", "stylus", "css"]
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: Implementation :: CPython'
]
include = ['README.md', 'LICENSE']

[tool.poetry.dependencies]
python = "==3.9.1"
awesome-slugify = "==1.6.5"
boto = "^2.49.0"
boto3 = "*"
django = "^3.1"
django-allauth = "^0.44.0"
django-anymail = "^8.2"
django-braces = "^1.14.0"
django-ckeditor = "*"
django-crispy-forms = "^1.11.0"
django-debug-toolbar = "*"
django-environ = "==0.4.5"
django-extensions = "^3.1.1"
django-markdownx = "*"
django-model-utils = "^4.1.1"
django-redis = "^4.12.1"
django-sitetree = "^1.16.0"
django-storages = "^1.11.1"
gevent = "^21.1.2"
gunicorn = "^20.0.4"
pillow = "^8.0.0"
psycopg2 = "^2.8.6"
pytz = "^2021.1"
raven = "^6.10.0"
redis = "^4.5.3"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
ipython = "*"
werkzeug = "*"
pre-commit = "^2.7.1"
black = "^20.8b1"
flake8 = "^3.8.3"
cookiecutter = "^1.7.2"
